# kafka-connect-rust-sandbox

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  example.json  kafka-connect-docker-setup.sh
app/: Cargo.toml
app/src/: main.rs
conf/: connect-standalone.properties  mongo-properties.json  mongo-source.properties
config/: connect-standalone.properties  mongo-source.properties
fast-food-store/src/: main.rs
src/: main.rs
src/models/: transaction.rs
