[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version= "0.4.31", features = ["serde"]}
mongodb = "1.1"
tokio = { version = "0.2.22", features = ["full"] }
bson = "1.0"
rand = "0.8"